# maze-classical-ai

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  solver.cpp
include/: maze.hpp
maps/: room_maze.txt  winding_path_maze.txt
scripts/: build.sh
src/: CMakeLists.txt  graph.cpp  grid.cpp  utils.cpp
tests/: CMakeLists.txt  test_grid.cpp
tests/maps/: hallway_maze_1.txt  hallway_maze_2.txt  hallway_maze_3.txt  hallway_maze_4.txt  hallway_maze_5.txt  invalid_start_end_maze_2.txt  invalid_start_end_maze_3.txt  invalid_winding_path_maze_1.txt  multiple_rows.txt  multiple_rows_2.txt  room_maze_2.txt  room_maze_3.txt  room_maze_4.txt  room_maze_5.txt  room_maze_6.txt  room_maze_7.txt  start_end_maze_1.txt  start_end_maze_2.txt  winding_path_maze_2.txt
